--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,7 +5,10 @@
     "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.netcode.gameobjects": "file:C:/Users/Julia/Downloads/com.unity.netcode.gameobjects-ngo-1.2.0/com.unity.netcode.gameobjects",
+    "com.unity.netcode.gameobjects": "1.2.0",
+    "com.unity.services.authentication": "2.4.0",
+    "com.unity.services.core": "1.7.0",
+    "com.unity.services.relay": "1.0.5",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
@@ -41,9 +44,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.services.authentication": "2.4.0",
-    "com.unity.services.core": "1.7.0",
-    "com.unity.services.relay": "1.0.5"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
