--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 .idea
 Build
 UserSettings
+Assets/Rat/Rat Animator Controller.controller
+Assets/Rat/Rat Animator Controller.controller.meta
