--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ Build
 UserSettings
 Assets/Rat/Rat Animator Controller.controller
 Assets/Rat/Rat Animator Controller.controller.meta
+Assets/Rat/Rat Animator Controller.controller
